force-app/main/default/objects/DealerLicenses__c/DealerLicenses__c.object-meta.xml
<CustomObject>
    <description>This table defines the Dealer Licenses the Dealer holds</description>
    <label>Dealer License</label>
    <nameField>
        <displayFormat>LIC-{0000}</displayFormat>
        <label>Dealer License Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dealer Licenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>