force-app/main/default/objects/DealerLicenses__c/fields/Activator_LicenseId__c.field-meta.xml
<CustomField>
    <fullName>Activator_LicenseId__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Id of the License record in the Activator System</inlineHelpText>
    <label>Activator License Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>