force-app/main/default/objects/DealerLicenses__c/fields/Dealer__c.field-meta.xml
<CustomField>
    <fullName>Dealer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Dealer who holds the license</inlineHelpText>
    <label>Dealer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Dealer Licenses</relationshipLabel>
    <relationshipName>Dealer_Licenses</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>