force-app/main/default/objects/DealerLicenses__c/fields/LicenseName__c.field-meta.xml
<CustomField>
    <fullName>LicenseName__c</fullName>
    <inlineHelpText>Name of license - could be primary or add-on (e.g. Direct Mail)</inlineHelpText>
    <label>License Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MarketActivator</fullName>
            </value>
            <value>
                <fullName>Auto Revenue</fullName>
            </value>
            <value>
                <fullName>ServiceActivator</fullName>
            </value>
            <value>
                <fullName>DealActivator</fullName>
            </value>
            <value>
                <fullName>BDC Activator</fullName>
            </value>
            <value>
                <fullName>FCA OEM</fullName>
            </value>
            <value>
                <fullName>FCA MarketActivator</fullName>
            </value>
            <value>
                <fullName>FCA ServiceActivator</fullName>
            </value>
            <value>
                <fullName>MVP Activator</fullName>
            </value>
            <value>
                <fullName>Wholesale Activator</fullName>
            </value>
            <value>
                <fullName>Recall Activator</fullName>
            </value>
            <value>
                <fullName>Social Add-On</fullName>
            </value>
            <value>
                <fullName>Direct Mail Activator</fullName>
            </value>
            <value>
                <fullName>Proofing Passthrough</fullName>
            </value>
            <value>
                <fullName>Conquest Direct Mail</fullName>
            </value>
            <value>
                <fullName>SalesActivator</fullName>
            </value>
            <value>
                <fullName>Test Account</fullName>
            </value>
            <value>
                <fullName>Service Conquest Funnel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>